Address encoding request and response
