# src/models/mod.rs
@@ -1,12 +1,13 @@
-pub mod decode_address_request;
 pub mod compile_notarized_transaction_intent_request;
 pub mod compile_signed_transaction_intent_request;
 pub mod compile_transaction_intent_request;
 pub mod convert_manifest_request;
+pub mod decode_address_request;
 pub mod decompile_notarized_transaction_intent_request;
 pub mod decompile_signed_transaction_intent_request;
 pub mod decompile_transaction_intent_request;
 pub mod decompile_unknown_transaction_intent_request;
+pub mod encode_address_request;
 pub mod information_request;
 
 pub mod instruction;
@@ -15,30 +16,17 @@ pub mod request;
 pub mod serde;
 pub mod value;
 
-pub use decode_address_request::{DecodeAddressRequest, DecodeAddressResponse};
-pub use compile_notarized_transaction_intent_request::{
-    CompileNotarizedTransactionIntentRequest, CompileNotarizedTransactionIntentResponse,
-};
-pub use compile_signed_transaction_intent_request::{
-    CompileSignedTransactionIntentRequest, CompileSignedTransactionIntentResponse,
-};
-pub use compile_transaction_intent_request::{
-    CompileTransactionIntentRequest, CompileTransactionIntentResponse,
-};
-pub use convert_manifest_request::{ConvertManifestRequest, ConvertManifestResponse};
-pub use decompile_notarized_transaction_intent_request::{
-    DecompileNotarizedTransactionIntentRequest, DecompileNotarizedTransactionIntentResponse,
-};
-pub use decompile_signed_transaction_intent_request::{
-    DecompileSignedTransactionIntentRequest, DecompileSignedTransactionIntentResponse,
-};
-pub use decompile_transaction_intent_request::{
-    DecompileTransactionIntentRequest, DecompileTransactionIntentResponse,
-};
-pub use decompile_unknown_transaction_intent_request::{
-    DecompileUnknownTransactionIntentRequest, DecompileUnknownTransactionIntentResponse,
-};
-pub use information_request::{InformationRequest, InformationResponse};
+pub use compile_notarized_transaction_intent_request::*;
+pub use compile_signed_transaction_intent_request::*;
+pub use compile_transaction_intent_request::*;
+pub use convert_manifest_request::*;
+pub use decode_address_request::*;
+pub use decompile_notarized_transaction_intent_request::*;
+pub use decompile_signed_transaction_intent_request::*;
+pub use decompile_transaction_intent_request::*;
+pub use decompile_unknown_transaction_intent_request::*;
+pub use encode_address_request::*;
+pub use information_request::*;
 
 pub use crate::models::serde::{
     Address, AddressKind, Signature, SignedTransactionIntent, TransactionIntent,
@@ -47,5 +35,5 @@ pub use instruction::{
     ast_instruction_from_instruction, instruction_from_ast_instruction, Instruction,
 };
 pub use manifest::{Manifest, ManifestKind};
-pub use request::{Request, Response};
+pub use request::*;
 pub use value::{ast_value_from_value, value_from_ast_value, Value, ValueKind};
